16_subseq/grade.txt
Grading at Tue Aug  7 07:33:10 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:5:10: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Werror=format=]
   printf("sizeof(array): %d\n", sizeof(array)/sizeof(int));
          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
